pull react+react-dom package

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,6 +2,8 @@
   <div class="container">
     <header>
       <h2>Tweets</h2>
+      <h4>By</h4>
+      <h3>Kamaal Rashid Khan</h3>
     </header>
 
     <ul>
